Fixed up some formatting on mobile devices and validated login info

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -2,6 +2,12 @@
 
 @import '~bootstrap';
 
+// Donation button
+#donate-button {
+    margin-top: -60%;
+}
+
+// Alert animations
 .alert-fadein {
     animation: fadeIn 500ms ease-out;
     opacity: 1;
